ini file update

--- a/parms_default.ini
+++ b/parms_default.ini
@@ -48,11 +48,10 @@ odeSolverRelTol = 1e-6   ; relative tolerance
 #-----------------
 #
 ##############################################################
-# DUCT SEGMENT STRIATED PARAMETERS
+# DUCT SEGMENT PARAMETERS
 ##############################################################
-[striated]
+[duct_common]
 # apical channel conductances
-G_ENaC = 2.5
 G_CFTR = 10
 G_BK = 6
 # basolateral channel conductances
@@ -83,10 +82,21 @@ p_CO = 50 ; 1/s
 buf_k_p = 0.03 ; /s
 buf_k_m = 20 ; /mMs
 # sodium potassium pump rates
-NKA_alpha_A = 0.7e-8 ; mol/m2
-NKA_alpha_B = 0.9e-8 ; mol/m2
 NKA_r = 1.305e-3 ; mM-3s-1
 NKA_beta = 0.647e-4 ; mM-1
+# osmolarity adjusting constants
+chi_C = 4e-14 ; mol (40 mM * 1000 um3    xxx e-18 mol)
+phi_A = 0.2 ; mM (fong 2016)
+phi_B = 10.92 ; mM (Mangos 1972)
+##############################################################
+# DUCT SEGMENT STRIATED PARAMETERS
+##############################################################
+[striated]
+# apical channel conductances
+G_ENaC = 2.5
+# sodium potassium pump rates
+NKA_alpha_A = 0.7e-8 ; mol/m2
+NKA_alpha_B = 0.9e-8 ; mol/m2
 # paracellular conductances
 G_P_Na = 0.1 ; S/m2
 G_P_K = 1 ; S/m2
@@ -94,10 +104,6 @@ G_P_Cl = 1.5 ; S/m2
 # water permeability across membranes
 L_A = 0 #0.6e1 ; um/s
 L_B = 0.6e1 ; um/s
-# osmolarity adjusting constants
-chi_C = 4e-14 ; mol (40 mM * 1000 um3    xxx e-18 mol)
-phi_A = 0.2 ; mM (fong 2016)
-phi_B = 10.92 ; mM (Mangos 1972)
 #
 ##############################################################
 # DUCT SEGMENT INTERCALATED PARAMETERS
