reversed the change of using multiple mesh file, added the capacity to read 3D mesh with curved and varying radii duct

--- a/parms_default.ini
+++ b/parms_default.ini
@@ -52,26 +52,27 @@ odeSolverRelTol = 1e-6   ; relative tolerance
 ##############################################################
 [duct_common]
 # apical channel conductances
-G_CFTR = 10
-G_BK = 6
+G_CFTR = 3
+G_BK = 1.58
 # basolateral channel conductances
-G_K_B = 0.5
+G_K_B = 2
 # apical or basolateral transporter rates
-NBC_alpha = 100
+NBC_alpha_A = 2200
+NBC_alpha_B = 2253
 NBC_k5_p = -6e-1 ; 1/s
 NBC_k5_m = 1e8 ; 1/s
 NBC_k6_p = 1e8 ; 1/s
 NBC_k6_m = -1.9e-1 ; 1/s
 #
 AE2_alpha_A = 0.001
-AE2_alpha_B = 0.0001
+AE2_alpha_B = 0.0052
 AE2_k3_p = 5.86 ; 1/s
 AE2_k3_m = 1.06e8 ; 1/s
 AE2_k4_p = 9.3e7 ; 1/s
 AE2_k4_m = 5.14 ; 1/s
 #
-NHE_alpha_A = 0.0001
-NHE_alpha_B = 0.0001
+NHE_alpha_A = 0.0002
+NHE_alpha_B = 0.0005
 NHE_k1_p = 1.4e3 ; 1/s
 NHE_k1_m = 1.4e11 ; 1/s
 NHE_k2_p = 2.5e9 ; 1/s
@@ -93,7 +94,7 @@ phi_B = 10.92 ; mM (Mangos 1972)
 ##############################################################
 [striated]
 # apical channel conductances
-G_ENaC = 2.5
+G_ENaC = 1
 # sodium potassium pump rates
 NKA_alpha_A = 0.7e-8 ; mol/m2
 NKA_alpha_B = 0.9e-8 ; mol/m2
@@ -114,11 +115,10 @@ L_B = 0.6e1 ; um/s
 G_ENaC = 0.1
 # sodium potassium pump rates
 NKA_alpha_A = 0.1e-8 ; mol/m2
-NKA_alpha_B = 0.5e-8 ; mol/m2
-# paracellular conductances
-G_P_Na = 0.4 ; S/m2
-G_P_K = 2 ; S/m2
-G_P_Cl = 2 ; S/m2
+NKA_alpha_B = 2e-8 ; mol/m2
+# paracellular conductances_P_Na = 0.05 ; S/m2
+G_P_K = 1 ; S/m2
+G_P_Cl = 1 ; S/m2
 # water permeability across membranes
 L_A = 0.6e1 ; um/s
 L_B = 0.6e1 ; um/s
