1.making the f_ODE_noMass.m compatible with dynamics simulation. 2.changed the process_mesh_info.m and f_ODE_noMass.m to handle branches of duct mesh

--- a/parms_default.ini
+++ b/parms_default.ini
@@ -99,9 +99,9 @@ G_ENaC = 1
 NKA_alpha_A = 0.7e-8 ; mol/m2
 NKA_alpha_B = 0.9e-8 ; mol/m2
 # paracellular conductances
-G_P_Na = 0.1 ; S/m2
+G_P_Na = 0.05 ; S/m2
 G_P_K = 1 ; S/m2
-G_P_Cl = 1.5 ; S/m2
+G_P_Cl = 1 ; S/m2
 # water permeability across membranes
 L_A = 0 #0.6e1 ; um/s
 L_B = 0.6e1 ; um/s
@@ -116,9 +116,10 @@ G_ENaC = 0.1
 # sodium potassium pump rates
 NKA_alpha_A = 0.1e-8 ; mol/m2
 NKA_alpha_B = 2e-8 ; mol/m2
-# paracellular conductances_P_Na = 0.05 ; S/m2
+# paracellular conductances
+G_P_Na = 1 ; S/m2
 G_P_K = 1 ; S/m2
-G_P_Cl = 1 ; S/m2
+G_P_Cl = 2 ; S/m2
 # water permeability across membranes
 L_A = 0.6e1 ; um/s
 L_B = 0.6e1 ; um/s
