added capability of simplified duct model and the data to simulate various flow rate dynamically

--- a/parms_default.ini
+++ b/parms_default.ini
@@ -51,21 +51,15 @@ odeSolverRelTol = 1e-6   ; relative tolerance
 # DUCT SEGMENT PARAMETERS
 ##############################################################
 [duct_common]
-# apical channel conductances
-G_CFTR = 3
-G_BK = 1.58
-# basolateral channel conductances
-G_K_B = 2
 # apical or basolateral transporter rates
-NBC_alpha_A = 2200
 NBC_alpha_B = 2253
 NBC_k5_p = -6e-1 ; 1/s
 NBC_k5_m = 1e8 ; 1/s
 NBC_k6_p = 1e8 ; 1/s
 NBC_k6_m = -1.9e-1 ; 1/s
 #
-AE2_alpha_A = 0.001
-AE2_alpha_B = 0.0052
+AE2_alpha_A = 0.002
+AE2_alpha_B = 0.005
 AE2_k3_p = 5.86 ; 1/s
 AE2_k3_m = 1.06e8 ; 1/s
 AE2_k4_p = 9.3e7 ; 1/s
@@ -87,21 +81,28 @@ NKA_r = 1.305e-3 ; mM-3s-1
 NKA_beta = 0.647e-4 ; mM-1
 # osmolarity adjusting constants
 chi_C = 4e-14 ; mol (40 mM * 1000 um3    xxx e-18 mol)
-phi_A = 0.2 ; mM (fong 2016)
+phi_A = 10 ; mM (fong 2016)
 phi_B = 10.92 ; mM (Mangos 1972)
 ##############################################################
 # DUCT SEGMENT STRIATED PARAMETERS
 ##############################################################
 [striated]
+# apical or basolateral transporter rates
+NBC_alpha_A = 1500
 # apical channel conductances
-G_ENaC = 1
+G_ENaC = 0.8
+G_CFTR = 15
+G_CaCC = 0
+G_BK = 1
+# basolateral channel conductances
+G_K_B = 4
 # sodium potassium pump rates
-NKA_alpha_A = 0.7e-8 ; mol/m2
-NKA_alpha_B = 0.9e-8 ; mol/m2
+NKA_alpha_A = 0e-8 ; mol/m2
+NKA_alpha_B = 0.8e-8 ; mol/m2
 # paracellular conductances
-G_P_Na = 0.05 ; S/m2
-G_P_K = 1 ; S/m2
-G_P_Cl = 1 ; S/m2
+G_P_Na = 0.15 ; S/m2
+G_P_K = 0.1 ; S/m2
+G_P_Cl = 0.35 ; S/m2
 # water permeability across membranes
 L_A = 0 #0.6e1 ; um/s
 L_B = 0.6e1 ; um/s
@@ -111,15 +112,22 @@ L_B = 0.6e1 ; um/s
 # only those that are different from striated are recorded
 ##############################################################
 [intercalated]
+# apical or basolateral transporter rates
+NBC_alpha_A = 0
 # apical channel conductances
-G_ENaC = 0.1
+G_ENaC = 0.01
+G_CFTR = 0
+G_CaCC = 1
+G_BK = 0.1
+# basolateral channel conductances
+G_K_B = 0.1
 # sodium potassium pump rates
-NKA_alpha_A = 0.1e-8 ; mol/m2
-NKA_alpha_B = 2e-8 ; mol/m2
+NKA_alpha_A = 0e-8 ; mol/m2
+NKA_alpha_B = 0.1e-8 ; mol/m2
 # paracellular conductances
-G_P_Na = 1 ; S/m2
-G_P_K = 1 ; S/m2
-G_P_Cl = 2 ; S/m2
+G_P_Na = 0.3 ; S/m2
+G_P_K = 0.3 ; S/m2
+G_P_Cl = 0.5 ; S/m2
 # water permeability across membranes
 L_A = 0.6e1 ; um/s
 L_B = 0.6e1 ; um/s
