--- a/parms_ex-vivo.ini
+++ b/parms_ex-vivo.ini
@@ -64,7 +64,7 @@ AE2_k4_p = 9.3e7 ; 1/s
 AE2_k4_m = 5.14 ; 1/s
 #
 NHE_alpha_A = 0.0046
-NHE_alpha_B = 0.07
+NHE_alpha_B = 0.08
 NHE_k1_p = 1.4e3 ; 1/s
 NHE_k1_m = 1.4e11 ; 1/s
 NHE_k2_p = 2.5e9 ; 1/s
@@ -91,24 +91,24 @@ NBC_alpha_B = 600000
 AE2_alpha_A = 0.0015
 AE2_alpha_B = 0.008
 # apical channel conductances
-G_ENaC = 8.9; S/m2 or pS/um2
-G_CFTR = 10.007;
+G_ENaC = 62.134; 8.9; S/m2 or pS/um2
+G_CFTR = 69.86; 10.007;
 G_CaCC = 0
-G_BK = 9
+G_BK = 63.832; 9
 # basolateral channel conductances
-G_K_B = 289
-G_Na_B = 78.34
-G_Cl_B = 103.34
+G_K_B = 91.71; 289
+G_Na_B = 24.86; 78.34
+G_Cl_B = 32.793; 103.34
 # sodium potassium pump rates
 NKA_alpha_A = 0e-8 ; mol/m2
-NKA_alpha_B = 4.518e-6 ; mol/m2
+NKA_alpha_B = 1.4337e-6; 4.518e-6 ; mol/m2
 # paracellular conductances
-G_P_Na = 0.4 ; S/m2
-G_P_K = 0.4 ; S/m2
-G_P_Cl = 2.8 ; S/m2
+G_P_Na = 2.79; 0.4 ; S/m2
+G_P_K = 2.79; 0.4 ; S/m2
+G_P_Cl = 19.548; 2.8 ; S/m2
 # water permeability across membranes
-L_A = 0 #0.6e1 ; um/s
-L_B = 5e3 ; um/s
+L_A = 0 ; um/s
+L_B = 1586.67; 5e3 ; um/s
 #
 ##############################################################
 # DUCT SEGMENT INTERCALATED PARAMETERS
@@ -123,19 +123,19 @@ AE2_alpha_B = 0.00033
 # apical channel conductances
 G_ENaC = 0;.02
 G_CFTR = 0
-G_CaCC = 0.1
+G_CaCC = 0.05
 G_BK = 0;.02;
 # basolateral channel conductances
-G_K_B = 1.06
-G_Na_B = 0.2;57
-G_Cl_B = 1.6
+G_K_B = 2.06
+G_Na_B = 0.5;57
+G_Cl_B = 1.5
 # sodium potassium pump rates
 NKA_alpha_A = 0e-8 ; mol/m2
-NKA_alpha_B = 1.3e-8 ; mol/m2
+NKA_alpha_B = 2e-8 ; mol/m2
 # paracellular conductances
-G_P_Na = 0.3 ; S/m2
-G_P_K = 0.3 ; S/m2
-G_P_Cl = 0.5 ; S/m2
+G_P_Na = 0.1 ; S/m2
+G_P_K = 0.1 ; S/m2
+G_P_Cl = 0.1 ; S/m2
 # water permeability across membranes
 L_A = 1e2 ; um/s
 L_B = 5e3 ; um/s
