--- a/parms_in-vivo.ini
+++ b/parms_in-vivo.ini
@@ -64,7 +64,7 @@ AE2_k4_p = 9.3e7 ; 1/s
 AE2_k4_m = 5.14 ; 1/s
 #
 NHE_alpha_A = 0.0013
-NHE_alpha_B = 0.0904
+NHE_alpha_B = 0.08
 NHE_k1_p = 1.4e3 ; 1/s
 NHE_k1_m = 1.4e11 ; 1/s
 NHE_k2_p = 2.5e9 ; 1/s
@@ -91,24 +91,24 @@ NBC_alpha_B = 600000
 AE2_alpha_A = 0.0056;
 AE2_alpha_B = 0.008
 # apical channel conductances
-G_ENaC = 48; S/m2 or pS/um2
-G_CFTR = 12.027;
+G_ENaC = 335.104; 48; S/m2 or pS/um2
+G_CFTR = 83.9645; 12.027;
 G_CaCC = 0
-G_BK = 42.417
+G_BK = 296.1272; 42.417
 # basolateral channel conductances
-G_K_B = 289
-G_Na_B = 78.34
-G_Cl_B = 103.34
+G_K_B = 91.71; 289
+G_Na_B = 24.86; 78.34
+G_Cl_B = 32.79; 103.34
 # sodium potassium pump rates
 NKA_alpha_A = 0e-8 ; mol/m2
-NKA_alpha_B = 4.518e-6 ; mol/m2
+NKA_alpha_B = 1.4337e-6; 4.518e-6 ; mol/m2
 # paracellular conductances
-G_P_Na = 0.4 ; S/m2
-G_P_K = 0.4 ; S/m2
-G_P_Cl = 2.8 ; S/m2
+G_P_Na = 2.79; 0.4 ; S/m2
+G_P_K = 2.79 ; S/m2
+G_P_Cl = 19.55 ; S/m2
 # water permeability across membranes
-L_A = 0 #0.6e1 ; um/s
-L_B = 5e3 ; um/s
+L_A = 0 ; um/s
+L_B = 1586.7; 5e3 ; um/s
 #
 ##############################################################
 # DUCT SEGMENT INTERCALATED PARAMETERS
@@ -116,29 +116,29 @@ L_B = 5e3 ; um/s
 ##############################################################
 [intercalated]
 # apical or basolateral transporter rates
-NBC_alpha_A = 0
-NBC_alpha_B = 13000
+NBC_alpha_A = 100
+NBC_alpha_B = 30000
 AE2_alpha_A = 0;.00001
-AE2_alpha_B = 0.00033
+AE2_alpha_B = 0.0005
 # apical channel conductances
 G_ENaC = 0;.02
 G_CFTR = 0
-G_CaCC = 0.1
-G_BK = 0;.02;
+G_CaCC = 0.3
+G_BK = 1;.02;
 # basolateral channel conductances
-G_K_B = 1.06
-G_Na_B = 0.2;57
-G_Cl_B = 1.6
+G_K_B = 8
+G_Na_B = 18
+G_Cl_B = 22
 # sodium potassium pump rates
 NKA_alpha_A = 0e-8 ; mol/m2
-NKA_alpha_B = 1.3e-8 ; mol/m2
+NKA_alpha_B = 1e-7 ; mol/m2
 # paracellular conductances
 G_P_Na = 0.3 ; S/m2
 G_P_K = 0.3 ; S/m2
 G_P_Cl = 0.5 ; S/m2
 # water permeability across membranes
-L_A = 1e2 ; um/s
-L_B = 5e3 ; um/s
+L_A = 1e3 ; um/s
+L_B = 1e3 ; um/s
 #-----------------
 #-----------------
 #
