code update based on new version of the paper, including GHK equation, new transporter equation, new flux plot, and new parameters

--- a/parms_ex-vivo.ini
+++ b/parms_ex-vivo.ini
@@ -52,33 +52,29 @@ odeSolverRelTol = 1e-6   ; relative tolerance
 ##############################################################
 [duct_common]
 # apical or basolateral transporter rates
-
-NBC_k5_p = -6e-1 ; 1/s
-NBC_k5_m = 1e8 ; 1/s
-NBC_k6_p = 1e8 ; 1/s
-NBC_k6_m = -1.9e-1 ; 1/s
+NBC_K_Na = 500;
+NBC_K_HCO = 30;
+NBC_R_lk = 100;
 #
-AE2_k3_p = 5.86 ; 1/s
-AE2_k3_m = 1.06e8 ; 1/s
-AE2_k4_p = 9.3e7 ; 1/s
-AE2_k4_m = 5.14 ; 1/s
+AE_k3_p = 0.352e3; % s^-1
+AE_k3_m = 0.347e3; 
+AE_k4_p = 0.354e3;
+AE_k4_m = 0.360e3;
+AE_K_Cl = 984;
+AE_K_HCO = 111;
 #
-NHE_alpha_A = 0.0046
-NHE_alpha_B = 0.08
-NHE_k1_p = 1.4e3 ; 1/s
-NHE_k1_m = 1.4e11 ; 1/s
-NHE_k2_p = 2.5e9 ; 1/s
-NHE_k2_m = 1.78e2 ; 1/s
+NHE_K_Na = 100; mM
+NHE_K_H = 0.5e-3; mM
 # CO2 permeability
-p_CO = 2000 ; 1/s
+p_CO = 0 ; 1/s
 # CO2 bicarbonate buffering
-buf_k_p = 0.03 ; /s
-buf_k_m = 20 ; /mMs
+buf_k_p = 0.365;  /s 
+buf_k_m = 481000; /s
 # sodium potassium pump rates
 NKA_r = 1.305e-3 ; mM-3s-1
 NKA_beta = 0.647e-4 ; mM-1
 # osmolarity adjusting constants
-chi_C = 4e-14 ; mol (40 mM * 1000 um3    xxx e-18 mol)
+chi_C = 4e-14 ; mol (80 mM * 500 um3    xxx e-18 mol)
 phi_A = 10 ; mM (fong 2016)
 phi_B = 10.92 ; mM (Mangos 1972)
 ##############################################################
@@ -86,29 +82,31 @@ phi_B = 10.92 ; mM (Mangos 1972)
 ##############################################################
 [striated]
 # apical or basolateral transporter rates
-NBC_alpha_A = 50000;
-NBC_alpha_B = 600000
-AE2_alpha_A = 0.0015
-AE2_alpha_B = 0.008
+NHE_G_A = 1e-9; mol/sec/cm^2
+NHE_G_B = 1e-9; 1e-10 mol/sec/cm^2
+NBC_G_A = 3e-9; mol/sec/cm^2
+NBC_G_B = 1.8e-8; 2.5e-8 mol/sec/cm^2
+AE_G_A = 3e8; e-18 mol/um^2 or e-10 mol/cm^2
+AE_G_B = 0.16; e-18 mol/um^2 or e-10 mol/cm^2
 # apical channel conductances
-G_ENaC = 62.134; 8.9; S/m2 or pS/um2
-G_CFTR = 69.86; 10.007;
+G_ENaC = 5.5e-4; 1e3 um/s
+G_CFTR = 5e-4; 1e3 um/s
 G_CaCC = 0
-G_BK = 63.832; 9
+G_BK = 2e-04; 1e3 um/s
 # basolateral channel conductances
-G_K_B = 91.71; 289
-G_Na_B = 24.86; 78.34
-G_Cl_B = 32.793; 103.34
+G_K_B = 5e-4; 1e3 um/s
+G_Na_B = 1.9e-5; 1e3 um/s
+G_Cl_B = 4e-5; 1e3 um/s
 # sodium potassium pump rates
 NKA_alpha_A = 0e-8 ; mol/m2
-NKA_alpha_B = 1.4337e-6; 4.518e-6 ; mol/m2
+NKA_alpha_B = 7e-7; mol/m2
 # paracellular conductances
-G_P_Na = 2.79; 0.4 ; S/m2
-G_P_K = 2.79; 0.4 ; S/m2
-G_P_Cl = 19.548; 2.8 ; S/m2
+G_P_Na = 3e-6; 1e3 um/s
+G_P_K = 1e-5; 1e3 um/s
+G_P_Cl = 1.5e-5; 1e3 um/s
 # water permeability across membranes
 L_A = 0 ; um/s
-L_B = 1586.67; 5e3 ; um/s
+L_B = 1500; um/s
 #
 ##############################################################
 # DUCT SEGMENT INTERCALATED PARAMETERS
@@ -116,29 +114,31 @@ L_B = 1586.67; 5e3 ; um/s
 ##############################################################
 [intercalated]
 # apical or basolateral transporter rates
-NBC_alpha_A = 0
-NBC_alpha_B = 13000
-AE2_alpha_A = 0;.00001
-AE2_alpha_B = 0.00033
+NHE_G_A = 6e-11; mol/sec/cm^2
+NHE_G_B = 2.3e-10; 1e-10 mol/sec/cm^2
+NBC_G_A = 1e-10; mol/sec/cm^2
+NBC_G_B = 6e-10 ; mol/sec/cm^2
+AE_G_A = 1e5;  e-18 mol/um^2
+AE_G_B = 0.018;  e-18 mol/um^2
 # apical channel conductances
-G_ENaC = 0;.02
+G_ENaC = 0; 1e3 um/s
 G_CFTR = 0
-G_CaCC = 0.05
-G_BK = 0;.02;
+G_CaCC = 3e-5; 1e3 um/s
+G_BK = 3e-5;
 # basolateral channel conductances
-G_K_B = 2.06
-G_Na_B = 0.5;57
-G_Cl_B = 1.5
+G_K_B = 5e-5; 1e3 um/s
+G_Na_B = 1.2e-6; 1e3 um/s
+G_Cl_B = 2.4e-6; 1e3 um/s
 # sodium potassium pump rates
 NKA_alpha_A = 0e-8 ; mol/m2
-NKA_alpha_B = 2e-8 ; mol/m2
+NKA_alpha_B = 5e-8 ; mol/m2
 # paracellular conductances
-G_P_Na = 0.1 ; S/m2
-G_P_K = 0.1 ; S/m2
-G_P_Cl = 0.1 ; S/m2
+G_P_Na = 5e-6 ; 1e3 um/s
+G_P_K = 5e-6 ; 1e3 um/s
+G_P_Cl = 5e-6 ; 1e3 um/s
 # water permeability across membranes
-L_A = 1e2 ; um/s
-L_B = 5e3 ; um/s
+L_A = 100 ; um/s
+L_B = 1500 ; um/s
 #-----------------
 #-----------------
 #
