--- a/parms_in-vivo.ini
+++ b/parms_in-vivo.ini
@@ -52,33 +52,29 @@ odeSolverRelTol = 1e-6   ; relative tolerance
 ##############################################################
 [duct_common]
 # apical or basolateral transporter rates
-
-NBC_k5_p = -6e-1 ; 1/s
-NBC_k5_m = 1e8 ; 1/s
-NBC_k6_p = 1e8 ; 1/s
-NBC_k6_m = -1.9e-1 ; 1/s
+NBC_K_Na = 500;
+NBC_K_HCO = 30;
+NBC_R_lk = 100;
 #
-AE2_k3_p = 5.86 ; 1/s
-AE2_k3_m = 1.06e8 ; 1/s
-AE2_k4_p = 9.3e7 ; 1/s
-AE2_k4_m = 5.14 ; 1/s
+AE_k3_p = 0.352e3; % s^-1
+AE_k3_m = 0.347e3; 
+AE_k4_p = 0.354e3;
+AE_k4_m = 0.360e3;
+AE_K_Cl = 984;
+AE_K_HCO = 111;
 #
-NHE_alpha_A = 0.0013
-NHE_alpha_B = 0.08
-NHE_k1_p = 1.4e3 ; 1/s
-NHE_k1_m = 1.4e11 ; 1/s
-NHE_k2_p = 2.5e9 ; 1/s
-NHE_k2_m = 1.78e2 ; 1/s
+NHE_K_Na = 100; mM
+NHE_K_H = 0.5e-3; mM
 # CO2 permeability
-p_CO = 2000 ; 1/s
+p_CO = 0 ; 1/s
 # CO2 bicarbonate buffering
-buf_k_p = 0.03 ; /s
-buf_k_m = 20 ; /mMs
+buf_k_p = 0.365;  /s 
+buf_k_m = 481000; /s
 # sodium potassium pump rates
 NKA_r = 1.305e-3 ; mM-3s-1
 NKA_beta = 0.647e-4 ; mM-1
 # osmolarity adjusting constants
-chi_C = 4e-14 ; mol (40 mM * 1000 um3    xxx e-18 mol)
+chi_C = 4e-14 ; mol (80 mM * 500 um3    xxx e-18 mol)
 phi_A = 10 ; mM (fong 2016)
 phi_B = 10.92 ; mM (Mangos 1972)
 ##############################################################
@@ -86,29 +82,31 @@ phi_B = 10.92 ; mM (Mangos 1972)
 ##############################################################
 [striated]
 # apical or basolateral transporter rates
-NBC_alpha_A = 486780;
-NBC_alpha_B = 600000
-AE2_alpha_A = 0.0056;
-AE2_alpha_B = 0.008
+NHE_G_A = 1e-9; mol/sec/cm^2
+NHE_G_B = 1e-9; mol/sec/cm^2
+NBC_G_A = 1e-9; mol/sec/cm^2
+NBC_G_B = 3.3e-8 ; mol/sec/cm^2
+AE_G_A = 7.2e8;  e-18 mol/um^2 or e-10 mol/cm^2
+AE_G_B = 0.16; 0.008 e-18 mol/um^2
 # apical channel conductances
-G_ENaC = 335.104; 48; S/m2 or pS/um2
-G_CFTR = 83.9645; 12.027;
+G_ENaC = 2e-3; 10^3 um/s
+G_CFTR = 6e-4; 10^3 um/s
 G_CaCC = 0
-G_BK = 296.1272; 42.417
+G_BK = 6e-4; 10^3 um/s
 # basolateral channel conductances
-G_K_B = 91.71; 289
-G_Na_B = 24.86; 78.34
-G_Cl_B = 32.79; 103.34
+G_K_B = 5e-4; 10^3 um/s
+G_Na_B = 1.9e-5; 10^3 um/s
+G_Cl_B = 3e-4;  10^3 um/s
 # sodium potassium pump rates
 NKA_alpha_A = 0e-8 ; mol/m2
-NKA_alpha_B = 1.4337e-6; 4.518e-6 ; mol/m2
+NKA_alpha_B = 7e-7; mol/m2
 # paracellular conductances
-G_P_Na = 2.79; 0.4 ; S/m2
-G_P_K = 2.79 ; S/m2
-G_P_Cl = 19.55 ; S/m2
+G_P_Na = 3e-06; 10^3 um/s
+G_P_K =  1e-05 ; 10^3 um/s
+G_P_Cl = 6e-05; 10^3 um/s
 # water permeability across membranes
 L_A = 0 ; um/s
-L_B = 1586.7; 5e3 ; um/s
+L_B = 1500;  um/s
 #
 ##############################################################
 # DUCT SEGMENT INTERCALATED PARAMETERS
@@ -116,29 +114,31 @@ L_B = 1586.7; 5e3 ; um/s
 ##############################################################
 [intercalated]
 # apical or basolateral transporter rates
-NBC_alpha_A = 100
-NBC_alpha_B = 30000
-AE2_alpha_A = 0;.00001
-AE2_alpha_B = 0.0005
+NHE_G_A = 6e-11; mol/sec/cm^2
+NHE_G_B = 2.3e-10; 1e-10 mol/sec/cm^2
+NBC_G_A = 1e-10; mol/sec/cm^2
+NBC_G_B = 6e-10 ; mol/sec/cm^2
+AE_G_A = 1e5;  e-18 mol/um^2
+AE_G_B = 0.018;  e-18 mol/um^2
 # apical channel conductances
-G_ENaC = 0;.02
+G_ENaC = 0; 1e3 um/s
 G_CFTR = 0
-G_CaCC = 0.3
-G_BK = 1;.02;
+G_CaCC = 3e-5; 1e3 um/s
+G_BK = 3e-5;
 # basolateral channel conductances
-G_K_B = 8
-G_Na_B = 18
-G_Cl_B = 22
+G_K_B = 5e-5; 1e3 um/s
+G_Na_B = 1.2e-6; 1e3 um/s
+G_Cl_B = 2.4e-6; 1e3 um/s
 # sodium potassium pump rates
 NKA_alpha_A = 0e-8 ; mol/m2
-NKA_alpha_B = 1e-7 ; mol/m2
+NKA_alpha_B = 5e-8 ; mol/m2
 # paracellular conductances
-G_P_Na = 0.3 ; S/m2
-G_P_K = 0.3 ; S/m2
-G_P_Cl = 0.5 ; S/m2
+G_P_Na = 5e-6 ; 1e3 um/s
+G_P_K = 5e-6 ; 1e3 um/s
+G_P_Cl = 5e-6 ; 1e3 um/s
 # water permeability across membranes
-L_A = 1e3 ; um/s
-L_B = 1e3 ; um/s
+L_A = 100 ; um/s
+L_B = 1500 ; um/s
 #-----------------
 #-----------------
 #
