updated the units of parameters and respective formula in script

--- a/parms_in-vivo.ini
+++ b/parms_in-vivo.ini
@@ -86,27 +86,27 @@ NHE_G_A = 1e-9; mol/sec/cm^2
 NHE_G_B = 1e-9; mol/sec/cm^2
 NBC_G_A = 1e-9; mol/sec/cm^2
 NBC_G_B = 3.3e-8 ; mol/sec/cm^2
-AE_G_A = 7.2e8;  e-18 mol/um^2 or e-10 mol/cm^2
-AE_G_B = 0.16; 0.008 e-18 mol/um^2
+AE_G_A = 7.2e-2;  mol/cm^2 (or 1e-8 mol/um^2)
+AE_G_B = 1.6e-11; mol/cm^2 (or 1e-8 mol/um^2)
 # apical channel conductances
-G_ENaC = 2e-3; 10^3 um/s
-G_CFTR = 6e-4; 10^3 um/s
+G_ENaC = 2e-4; cm/s (or 10^4 um/s)
+G_CFTR = 6e-5; cm/s 
 G_CaCC = 0
-G_BK = 6e-4; 10^3 um/s
+G_BK = 6e-5; cm/s or 10^4 um/s
 # basolateral channel conductances
-G_K_B = 5e-4; 10^3 um/s
-G_Na_B = 1.9e-5; 10^3 um/s
-G_Cl_B = 3e-4;  10^3 um/s
+G_K_B = 5e-5; cm/s
+G_Na_B = 1.9e-6; cm/s
+G_Cl_B = 3e-5;  cm/s
 # sodium potassium pump rates
-NKA_alpha_A = 0e-8 ; mol/m2
-NKA_alpha_B = 7e-7; mol/m2
+NKA_alpha_A = 0e-4 ; mol/cm^2
+NKA_alpha_B = 7e-3; mol/cm^2
 # paracellular conductances
-G_P_Na = 3e-06; 10^3 um/s
-G_P_K =  1e-05 ; 10^3 um/s
-G_P_Cl = 6e-05; 10^3 um/s
+G_P_Na = 3e-07; cm/s
+G_P_K =  1e-06 ; cm/s
+G_P_Cl = 6e-06; cm/s
 # water permeability across membranes
-L_A = 0 ; um/s
-L_B = 1500;  um/s
+L_A = 0 ; cm/s
+L_B = 0.15;  cm/s
 #
 ##############################################################
 # DUCT SEGMENT INTERCALATED PARAMETERS
@@ -115,30 +115,30 @@ L_B = 1500;  um/s
 [intercalated]
 # apical or basolateral transporter rates
 NHE_G_A = 6e-11; mol/sec/cm^2
-NHE_G_B = 2.3e-10; 1e-10 mol/sec/cm^2
+NHE_G_B = 2.3e-10; mol/sec/cm^2
 NBC_G_A = 1e-10; mol/sec/cm^2
 NBC_G_B = 6e-10 ; mol/sec/cm^2
-AE_G_A = 1e5;  e-18 mol/um^2
-AE_G_B = 0.018;  e-18 mol/um^2
+AE_G_A = 1e-5;  mol/cm^2 (or 1e-8 mol/um^2)
+AE_G_B = 1.8e-12;  mol/cm^2
 # apical channel conductances
-G_ENaC = 0; 1e3 um/s
+G_ENaC = 0; cm/s
 G_CFTR = 0
-G_CaCC = 3e-5; 1e3 um/s
-G_BK = 3e-5;
+G_CaCC = 3e-6; cm/s
+G_BK = 3e-6; cm/s
 # basolateral channel conductances
-G_K_B = 5e-5; 1e3 um/s
-G_Na_B = 1.2e-6; 1e3 um/s
-G_Cl_B = 2.4e-6; 1e3 um/s
+G_K_B = 5e-6; cm/s
+G_Na_B = 1.2e-7; cm/s
+G_Cl_B = 2.4e-7; cm/s
 # sodium potassium pump rates
-NKA_alpha_A = 0e-8 ; mol/m2
-NKA_alpha_B = 5e-8 ; mol/m2
+NKA_alpha_A = 0e-4 ; mol/cm^2
+NKA_alpha_B = 5e-4 ; mol/cm^2
 # paracellular conductances
-G_P_Na = 5e-6 ; 1e3 um/s
-G_P_K = 5e-6 ; 1e3 um/s
-G_P_Cl = 5e-6 ; 1e3 um/s
+G_P_Na = 5e-7 ; cm/s
+G_P_K = 5e-7 ; cm/s
+G_P_Cl = 5e-7 ; cm/s
 # water permeability across membranes
-L_A = 100 ; um/s
-L_B = 1500 ; um/s
+L_A = 0.01 ; cm/s
+L_B = 0.15 ; cm/s
 #-----------------
 #-----------------
 #
